adds update API
