# handler/user.go
@@ -7,25 +7,26 @@ import (
 	"net/http"
 	"strings"
 
+	"github.com/dell/csm-deployment/model"
 	"github.com/dell/csm-deployment/utils"
 	"github.com/labstack/echo/v4"
 )
 
 type userCredentials struct {
-	Username string
-	Password string
+	username string
+	password string
 }
 
-func getCredentials(s string) (*userCredentials, error) {
-	c := &userCredentials{}
+func getCredentials(basicAuth []string) (*userCredentials, error) {
 
-	token := strings.Split(s, "Basic")
+	if len(basicAuth) != 1 {
+		return nil, errors.New("ambiguity: basic token not found or it in proper format")
+	}
+	token := strings.Split(basicAuth[0], "Basic")
 	if len(token) != 2 {
 		return nil, errors.New("basic token not in proper format")
 	}
-	tokenStr := strings.TrimSpace(token[1])
-	decoded, err := base64.StdEncoding.DecodeString(tokenStr)
-
+	decoded, err := base64.StdEncoding.DecodeString(strings.TrimSpace(token[1]))
 	if err != nil {
 		return nil, fmt.Errorf("decode error: %v", err)
 	}
@@ -34,7 +35,33 @@ func getCredentials(s string) (*userCredentials, error) {
 		return nil, errors.New("basic token not in proper format")
 	}
 
-	return c, nil
+	return &userCredentials{
+		username: result[0],
+		password: result[1],
+	}, nil
+}
+
+func (h *Handler) authenticateLogin(c echo.Context) (*model.User, int, utils.ErrorResponse) {
+	creds, err := getCredentials(c.Request().Header.Values("authorization"))
+	if err != nil {
+		return nil, http.StatusUnauthorized, utils.NewErrorResponse(http.StatusUnauthorized, utils.ErrorSeverity, "parsing token", err)
+	}
+
+	u, err := h.userStore.GetByUsername(creds.username)
+	if err != nil {
+		v := fmt.Sprintf("encountered error looking for the user: %s", creds.username)
+		return nil, http.StatusInternalServerError, utils.NewErrorResponse(http.StatusInternalServerError, utils.CriticalSeverity, v, err)
+	}
+	if u == nil {
+		v := fmt.Sprintf("the user, %s, is forbidden", creds.username)
+		return nil, http.StatusForbidden, utils.NewErrorResponse(http.StatusForbidden, utils.CriticalSeverity, v, err)
+	}
+	if u.Password != creds.password {
+		v := fmt.Sprintf("the password, %s, is forbidden", creds.password)
+		return nil, http.StatusForbidden, utils.NewErrorResponse(http.StatusForbidden, utils.CriticalSeverity, v, err)
+	}
+	return u, http.StatusOK, utils.ErrorResponse{}
+
 }
 
 // Login godoc
@@ -45,37 +72,48 @@ func getCredentials(s string) (*userCredentials, error) {
 // @Accept  json
 // @Produce  json
 // @Security BasicAuth
-// @Param Authorization header string true "Basic access authentication" default(Basic <base64 of username:password>)
-// @Success 200 {string} string
-// @Failure 400 {object} utils.ErrorResponse
+// @Success 200 {object} userResponse
 // @Failure 401 {object} utils.ErrorResponse
-// @Failure 422 {object} utils.ErrorResponse
-// @Failure 404 {object} utils.ErrorResponse
+// @Failure 403 {object} utils.ErrorResponse
 // @Failure 500 {object} utils.ErrorResponse
 // @Router /users/login [post]
 func (h *Handler) Login(c echo.Context) error {
-	basicAuth := c.Request().Header.Values("Authorization")
-	if len(basicAuth) != 0 {
-		t, err := getCredentials(basicAuth[0])
-		if err != nil {
-			return c.JSON(http.StatusUnprocessableEntity, utils.NewErrorResponse(http.StatusBadRequest, utils.ErrorSeverity, "parsing token", err))
-		}
-		c.Logger().Print(t)
-		return c.JSON(http.StatusOK, basicAuth[0])
+	u, code, err := h.authenticateLogin(c)
+	if u != nil {
+		return c.JSON(http.StatusOK, newUserResponse(u))
 	}
-	req := &userLoginRequest{}
-	if err := req.bind(c); err != nil {
+
+	return c.JSON(code, err)
+}
+
+// UpdateUser godoc
+// @Summary Update current user
+// @Description Update user information for current user
+// @ID update-user
+// @Tags user
+// @Accept  json
+// @Produce  json
+// @Security BasicAuth
+// @Param user body userUpdateRequest true "User details to update. At least **one** field is required."
+// @Success 204 "No Content"
+// @Failure 401 {object} utils.ErrorResponse
+// @Failure 403 {object} utils.ErrorResponse
+// @Failure 500 {object} utils.ErrorResponse
+// @Router /users/update [patch]
+func (h *Handler) UpdateUser(c echo.Context) error {
+	u, code, err := h.authenticateLogin(c)
+	if u == nil {
+		return c.JSON(code, err)
+	}
+	req := new(userUpdateRequest)
+	req.populate(u)
+	if err := req.bind(c, u); err != nil {
 		return c.JSON(http.StatusUnprocessableEntity, utils.NewErrorResponse(http.StatusUnprocessableEntity, utils.ErrorSeverity, "", err))
 	}
-	u, err := h.userStore.GetByUsername(req.Username)
-	if err != nil {
-		return c.JSON(http.StatusForbidden, utils.NewErrorResponse(http.StatusForbidden, utils.CriticalSeverity, "", err))
+	if err := h.userStore.Update(u); err != nil {
+		return c.JSON(http.StatusUnprocessableEntity, utils.NewErrorResponse(http.StatusUnprocessableEntity, utils.ErrorSeverity, "", err))
 	}
-	if u == nil {
-		return c.JSON(http.StatusForbidden, utils.NewErrorResponse(http.StatusForbidden, utils.CriticalSeverity, "", err))
-	}
-	if !u.CheckPassword(req.Password) {
-		return c.JSON(http.StatusForbidden, utils.NewErrorResponse(http.StatusForbidden, utils.CriticalSeverity, "", err))
-	}
-	return c.JSON(http.StatusOK, newUserResponse(u))
+
+	return c.JSON(http.StatusNoContent, nil)
+
 }
